# python-final-project

./: .gitignore  README.md  addressbook.pkl  main.py  pyproject.toml  requirements.txt
src/: address_book.py  bot_assistant.py  bot_autocomplete.py  bot_config.py  bot_utils.py  commands.py  constants.py  jokes.py  main.py  main.tasnotes.py  note_commands.py  notes.py  storage.py  tagsnotes.py  utils.py
