[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-bot-assistant"
version = "0.1.0"
description = "Tars Bot Assistant"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
    "python-box>=7.3.0"
]

[project.scripts]
tars = "main:main"